--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "mobx": "^6.4.2",
+    "antd": "^4.18.9",
     "axios": "^0.26.0",
+    "mobx": "^6.4.2",
     "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0"
   },
   "scripts": {
