--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.9",
     "axios": "^0.26.0",
     "mobx": "^6.4.2",
@@ -10,7 +11,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
-    "react-scripts": "5.0.0"
+    "react-scripts": "5.0.0",
+    "sass": "^1.49.9"
   },
   "scripts": {
     "start": "react-scripts start",
