--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "antd": "^4.18.9",
+    "antd-img-crop": "^4.1.0",
     "axios": "^0.26.0",
+    "framer-motion": "^6.2.8",
     "mobx": "^6.4.2",
     "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
