--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
-    "sass": "^1.49.9"
+    "sass": "^1.49.9",
+    "socket.io-client": "^4.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
