--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-scroll-to-bottom": "^4.2.0",
     "sass": "^1.49.9",
     "socket.io-client": "^4.4.1"
   },
