--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "antd": "^4.18.9",
     "antd-img-crop": "^4.1.0",
     "axios": "^0.26.0",
+    "firebase": "^9.6.10",
     "framer-motion": "^6.2.8",
     "mobx": "^6.4.2",
     "mobx-react-lite": "^3.3.0",
