--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-REACT_APP_SERVER_URL=http://192.168.0.104/
+REACT_APP_SERVER_URL=http://localhost/
+REACT_APP_GOOGLE_ID=193449131376-gk3kmhqj0onc5uappjhqveqs6p7ov73p.apps.googleusercontent.com
+REACT_APP_FCM_VAPID_KEY=BHyDTmFLExfXfUtnle7HXJ9T_sNXqvNqCLf0XGbzk8-nemmhVowFNBdDiv52T_WwQznJH8Cdc8XGwvjGPczRxNw
