--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-scroll-to-bottom": "^4.2.0",
