--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@react-oauth/google": "^0.6.0",
     "antd": "^4.18.9",
     "antd-img-crop": "^4.1.0",
     "axios": "^0.26.0",
@@ -13,7 +14,6 @@
     "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-scroll-to-bottom": "^4.2.0",
